💄 Fix etiquette spacings

--- a/assets/sass/app.sass
+++ b/assets/sass/app.sass
@@ -90,14 +90,14 @@ body
     background-color: $oblivion-1100
 
   &-properties
-    margin-top: 9px
-    margin-bottom: 39px
+    margin-top: 1px
+    margin-bottom: 27px
 
   &-property
     margin-top: 14px
-    padding-bottom: 19px
+    padding-bottom: 15px
 
-    border-bottom: 1px solid $oblivion-1100
+    border-bottom: 1px solid $thunderstorm-700
 
     &Name
       margin-bottom: 2px
@@ -111,7 +111,7 @@ body
 
   &-logo
     margin: 0 auto
-    margin-bottom: 21px
+    margin-bottom: 13px
 
     height: 96px
     width: 96px
@@ -128,14 +128,14 @@ body
     text-align: center
 
   &-desc
-    margin-bottom: 49px
+    margin-bottom: 25px
 
     @extend .caption-tag
     text-align: center
     letter-spacing: 0
 
   &-annotation
-    margin-bottom: 16px
+    margin-bottom: 8px
 
     font-family: gt-america-mono-medium
     font-size: 10px
@@ -150,7 +150,7 @@ body
 
     z-index: -50
 
-    transform: translateY(-124px)
+    transform: translateY(-152px)
 
     &-middle
       position: relative
@@ -166,6 +166,7 @@ body
     &::before, &::after
       content: ""
       position: absolute
+      bottom: 12px
       bottom: 12px
 
       height: 240px
